# Messenger-Qml-Desktop

./: CMakeLists.txt  README.md  Resources.qrc  main.cpp  t_defines.h  t_fs.cpp  t_fs.h  t_image_downloader_async.h  t_image_info.cpp  t_image_info.h  t_image_info_storage_memory.cpp  t_image_info_storage_memory.h  t_image_storage_memory.h  t_json_conversations.cpp  t_json_conversations.h  t_meta_holder_memory.cpp  t_meta_holder_memory.h  t_network_simulator.cpp  t_network_simulator.h  t_path_maker.cpp  t_path_maker.h  t_ui_async_avatar_creating_response.cpp  t_ui_async_avatar_downloading_response.h  t_ui_default_avatar_provider.h  t_ui_squared_avatar_provider.cpp
json/: conversation_with.js  conversation_with.json  conversations.json  peer_info.json  peer_info_models.json  peers.js  peers.json
sources/: i_json_processor.cpp  i_json_processor.h  main.cpp  t_application.cpp  t_application.h  t_async_default_avatar_creator.cpp  t_async_default_avatar_creator.h  t_async_image_downloader.cpp  t_async_image_downloader.h  t_defines.h  t_fs.cpp  t_fs.h  t_fs_image_worker.cpp  t_fs_image_worker.h  t_image_component.cpp  t_image_component.hpp  t_image_creator_async.cpp  t_image_creator_async.h  t_image_downloader_async.cpp  t_image_fs_worker.cpp  t_image_fs_worker.h  t_image_info.cpp  t_image_info.h  t_image_info_storage_memory.cpp  t_image_info_storage_memory.h  t_image_storage_memory.cpp  t_image_storage_memory.h  t_json_defines.h  t_json_parse_peer.cpp  t_json_parse_peer.h  t_json_peer_info_parser.cpp  t_json_peer_info_parser.h  t_json_peer_message_processor.cpp  t_json_peer_message_processor.h  t_json_peer_parser.cpp  t_json_peer_parser.h  t_main.cpp  t_messenger_context.cpp  t_messenger_context.h  t_meta_holder_memory.cpp  (+48 more)
sources/async/: t_qt_async_default_avatar_creator.cpp  t_qt_async_default_avatar_creator.h  t_qt_async_image_downloader.cpp  t_qt_async_image_downloader.h
sources/interface/: i_image_info_storage.cpp  i_image_info_storage.h  i_messenger_context_getter.cpp  i_messenger_context_getter.h  i_messenger_context_setter.cpp  i_messenger_context_setter.h  i_meta_holder.cpp  i_path_avatar.cpp  i_path_avatar.h  i_path_photo.cpp  i_path_photo.h  i_path_self_and_peer.cpp  i_path_stiker.cpp  i_path_stiker.h  i_peer_context_setter.cpp  i_peer_context_setter.h  i_peer_info_storage.cpp  i_peer_info_storage.h  i_rotator.h
sources/interfaces/: i_avatar_fs_path.cpp  i_avatar_fs_path.hpp  i_file_meta_holder.cpp  i_file_meta_holder.hpp  i_fs_image_worker.cpp  i_fs_image_worker.h  i_image_component_storage.cpp  i_image_component_storage.hpp  i_image_fs_worker.cpp  i_image_fs_worker.h  i_json_processor.cpp  i_json_processor.h  i_message_component_storage.cpp  i_message_component_storage.hpp  i_meta_holder.cpp  i_meta_holder.h  i_path_avatar.cpp  i_path_avatar.h  i_path_photo.cpp  i_path_photo.h  i_path_self_and_peer.cpp  i_path_self_and_peer.h  i_path_stiker.cpp  i_peer_component_storage.cpp  i_peer_component_storage.hpp  i_peer_context_getter.cpp  i_peer_context_getter.h  i_peer_context_setter.cpp  i_peer_context_setter.h  i_photo_path.cpp  i_photo_path.hpp  i_rotator.cpp  i_stiker_fs_path.hpp  i_storage_image_info.cpp  i_storage_image_info.h  i_storage_message_info.cpp  i_storage_message_info.h  i_storage_peer_info.cpp  i_storage_peer_info.h  i_ui_image_path_maker.cpp  (+3 more)
sources/json/: t_json_defines.h  t_json_peer_message_processor.cpp  t_json_peer_message_processor.h  t_json_peer_preview_parser.cpp  t_json_peer_preview_parser.h
sources/memory/: t_image_component_storage.cpp  t_image_component_storage.hpp  t_image_info_storage.cpp  t_image_info_storage.h  t_memory_image_info_storage.cpp  t_memory_image_info_storage.h  t_memory_meta_holder.cpp  t_memory_meta_holder.h  t_message_component_storage.cpp  t_message_component_storage.hpp  t_messender_context_setter.cpp  t_messender_context_setter.h  t_messenger_context.cpp  t_messenger_context.h  t_messenger_context_getter.cpp  t_messenger_context_getter.h  t_messenger_context_setter.cpp  t_messenger_context_setter.h  t_meta_holder.cpp  t_meta_holder.h  t_meta_holder.hpp  t_peer_component_storage.cpp  t_peer_component_storage.h  t_peer_context_getter.cpp  t_peer_context_getter.h  t_peer_context_setter.cpp  t_peer_context_setter.h  t_peer_info_storage.cpp  t_peer_info_storage.h  t_storage_image_info.cpp  t_storage_image_info.h  t_storage_message_info.cpp  t_storage_message_info.h  t_storage_peer_info.cpp  t_storage_peer_info.h
sources/ui/: t_qt_default_avatar_provider.cpp  t_qt_default_avatar_provider.h  t_qt_default_avatar_response.cpp  t_qt_default_avatar_response.h  t_qt_image_provider.cpp  t_qt_image_provider.h  t_qt_image_response.cpp  t_qt_image_response.h  t_qt_peer_conversation_provider.cpp  t_qt_peer_conversation_provider.h  t_qt_peer_preview_provider.cpp  t_qt_peer_preview_provider.h
ui/: ChatArea.qml  Conversation.qml  ConversationPage.qml  DebugArea.qml  Main.qml  PeerArea.qml  PeerPreview.qml  RouterDevice.qml  TelemetryDevice.qml
